--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>You Gotta Do</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>These are what you gotta do!</h1>
