--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>You Gotta Do</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        h1{
+        margin-left: 20%;
+    }
+    #ideas {
+        border: 1px solid black;
+        margin-left: 20%;
+        width: 30%;
+        text-align: center;
+    }
+    </style>
 </head>
 <body>
     <h1>These are what you gotta do!</h1>
