--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <h1>These are what you gotta do!</h1>
     <div id="ideas">
-        <strike><h2>Statistics</h2></strike>
+        <s><h2>Statistics</h2></s>
         <h2>Seminar PPT</h2>
         <h2>DBMS viva prep</h2>
         <h2>ADA Lab exam prep</h2>
