--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <h1>These are what you gotta do!</h1>
     <div id="ideas">
         <s><h2>Statistics</h2></s>
+        <h2>Classroom-Assignments</h2>
         <h2>Seminar PPT</h2>
         <h2>DBMS viva prep</h2>
         <h2>ADA Lab exam prep</h2>
