--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
 <body>
     <h1>These are what you gotta do!</h1>
     <div id="ideas">
-        <s><h2>Statistics</h2>
-            <h2>Protocol-stuff</h2>
-        </s>
+        <s><h2>Statistics</h2></s>
+        <s><h2>Protocol-stuff</h2></s>
         <h2>Learning-paths</h2>
         <h2>Seminar PPT</h2>
         <h2>DBMS viva prep</h2>
