--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         border: 1px solid black;
         margin-left: 20%;
         width: 30%;
+        border-radius: 5%;
         text-align: center;
     }
     </style>
