--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
     <h1>These are what you gotta do!</h1>
     <div id="ideas">
         <s><h2>Statistics</h2></s>
-        <s><h2>Protocol-stuff</h2></s>
+        <h2>CodeAthon Quetions</h2>
+        <h2>Insta Stories Questions</h2>
+        <h2>Schedule Meets for tomo</h2>
+        <h2>Discord Bot Prep</h2>
         <h2>Learning-paths</h2>
         <h2>Seminar PPT</h2>
         <h2>DBMS viva prep</h2>
         <h2>ADA Lab exam prep</h2>
         <h2>Semester project</h2>
         <h2>Protocol Page</h2>
-        <h2>Discord Bot prep</h2>
     </div>
 </body>
 </html>
