--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1>These are what you gotta do!</h1>
     <div id="ideas">
         <s><h2>Statistics</h2></s>
-        <h2>CodeAthon Quetions</h2>
+        <h2>CodeAthon Questions</h2>
         <h2>Insta Stories Questions</h2>
         <h2>Schedule Meets for tomo</h2>
         <h2>Discord Bot Prep</h2>
